--- a/src/Resulty/Resulty.csproj
+++ b/src/Resulty/Resulty.csproj
@@ -9,8 +9,19 @@
     <Authors>Oleksandr Selehenenko</Authors>
     <Description>A lightweight library for easier error handling and result transformations in .NET</Description>
     <PackageTags>result dotnet pattern</PackageTags>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Version>1.0.0</Version>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
